Updated Home Section

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,6 @@
 /* styles.css */
 body {
-    font-family: Arial, sans-serif;
+    font-family: Lucida, monospace;
     background-color: #f8f6f3; 
     margin: 0;
     padding: 0;
@@ -22,7 +22,7 @@ h1{
 .side-controls .control {
     display: block;
     margin: 20px 0; 
-    background-color: rgb(138, 167, 123);
+    background-color: #fa6491;
     color: #f8f6f3;
     padding: 10px;
     text-align: center;
@@ -44,7 +44,16 @@ h1{
     border-bottom: 5px solid #593B1F; 
 }
 
-.image img {
+.name-image img {
+    display: block; 
+    max-width: 70%; 
+    height: auto; 
+    margin: 1vh auto; 
+    border-radius: 15px; 
+    margin-bottom: 2vh;
+}
+
+.hero-image img {
     display: block; 
     max-width: 90%; 
     height: auto; 
@@ -53,14 +62,16 @@ h1{
     margin-right: 5vw;
 }
 
+
 .welcome-text {
-    background-color: #593B1F; 
-    color: #f8f6f3; 
+    background-color: #d9baa0; 
+    color: black; 
     border-radius: 2vw; 
     display: inline-block; 
     padding: 20px;
-    margin: 1vh auto; 
-    max-width: 60%; 
+    margin: 5vh auto; 
+    max-width: 80%; 
+    font-size: 1.75vw;
 }
 
 /* Adjust the .content-section padding to account for fixed side controls */
