--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+
 /* styles.css */
 body {
     font-family: Lucida, monospace;
@@ -95,11 +97,10 @@ h1{
 
 .hero-image img {
     display: block; 
-    max-width: 90%; 
+    max-width: 80%; 
     height: auto; 
     margin: 1vh auto; 
     border-radius: 4vw; 
-    margin-right: 5vw;
 }
 
 
@@ -110,7 +111,7 @@ h1{
     display: inline-block; 
     padding: 20px;
     margin: 5vh auto; 
-    max-width: 80%; 
+    max-width: 70%; 
     font-size: 1.75vw;
 }
 
@@ -164,8 +165,133 @@ h1{
     right: 0;
 }
 
+/*-CONTACT ME---------------------------------------------------------------------------------------*/
 
-/* Media query for mobile devices */
+
+.wrapper{
+    margin-left: auto;
+    margin-right: auto;
+    width: 450px;
+     background: #fff;
+    border-radius: 10px;
+     box-shadow: 0 15px 40px rgba(0,0,0,0.12);
+}
+.wrapper header{
+    display: flex;
+    align-items: center;
+    padding: 25px 30px 10px;
+    justify-content: space-between;
+}
+header .icons{
+    display: flex;
+}
+header .icons span{
+    height: 38px;
+    width: 38px;
+    margin: 0 1px;
+    cursor: pointer;
+    color: #878787;
+    text-align: center;
+    line-height: 38px;
+    font-size: 1.9rem;
+    user-select: none;
+    border-radius: 50%;
+}
+.icons span:last-child{
+    margin-right: -10px;
+}
+header .icons span:hover{
+    background: #f2f2f2;
+}
+header .current-date{
+    font-size: 1.45rem;
+    font-weight: 500;
+}
+.calendar{
+    padding: 20px;
+}
+.calendar ul{
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    text-align: center;
+}
+.calendar .days{
+    margin-bottom: 20px;
+}
+.calendar li{
+    color: #333;
+    width: calc(100% / 7);
+    font-size: 1.07rem;
+}
+.calendar .weeks li{
+    font-weight: 500;
+    cursor: default;
+}
+.calendar .days li{
+    z-index: 1;
+    cursor: pointer;
+    position: relative;
+    margin-top: 30px;
+}
+.days li.inactive{
+    color: #aaa;
+}
+.days li.active{
+    color: #fff;
+}
+.days li::before{
+    position: absolute;
+    content: "";
+    left: 50%;
+    top: 50%;
+    height: 40px;
+    width: 40px;
+    z-index: -1;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+}
+.days li.active::before{
+    background: #fa6491;
+}
+.days li:not(.active):hover::before{
+    background: #f2f2f2;
+}
+
+/*-CONTACT ME---------------------------------------------------------------------------------------*/
+
+/* Contact form styling */
+#contact-form {
+    max-width: 600px;
+    margin: auto;
+    padding: 15px;
+    text-align: left;
+}
+
+#contact-form input, #contact-form textarea {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid black;
+    box-shadow: 0 0 5px #fa6491;
+    border-radius: 5px;
+}
+
+#contact-form button {
+    background-color: #fa6491;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#contact-form button:hover {
+    background-color: #e63973;
+}
+
+
+/*-MOBILE VIEW---------------------------------------------------------------------------------------*/
 @media (max-width: 600px) {
    
 
