--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -50,7 +50,7 @@ h1{
 
 .aboutMe-image img {
     display: block; 
-    max-width: 30%; 
+    max-width: 25%; 
     height: auto; 
     margin: 1vh auto; 
     border-radius: 15px; 
@@ -59,7 +59,7 @@ h1{
 
 .gallery-image img {
     display: block; 
-    max-width: 25%; 
+    max-width: 20%; 
     height: auto; 
     margin: 1vh auto; 
     border-radius: 15px; 
@@ -68,7 +68,7 @@ h1{
 
 .appointment-image img {
     display: block; 
-    max-width: 60%; 
+    max-width: 50%; 
     height: auto; 
     margin: 1vh auto; 
     border-radius: 15px; 
@@ -77,7 +77,7 @@ h1{
 
 .contact-image img {
     display: block; 
-    max-width: 45%; 
+    max-width: 35%; 
     height: auto; 
     margin: 1vh auto; 
     border-radius: 15px; 
@@ -130,19 +130,19 @@ h1{
 
 .carousel {
     position: relative;
-    max-width: 600px; /* Adjust as needed */
+    max-width: 600px; 
     margin: auto;
     overflow: hidden;
 }
 
 .carousel-images img {
     width: 100%;
-    display: none; /* Hide all images by default */
-    transition: opacity 0.5s ease-in-out; /* Smooth transition for the fade effect */
+    display: none; 
+    transition: opacity 0.5s ease-in-out; 
 }
 
 .carousel-images img.active {
-    display: block; /* Only the active image is shown */
+    display: block; 
     opacity: 1;
 }
 
@@ -209,6 +209,7 @@ header .current-date{
 }
 .calendar{
     padding: 20px;
+    margin-right: 10%;
 }
 .calendar ul{
     display: flex;
@@ -265,7 +266,8 @@ header .current-date{
     max-width: 600px;
     margin: auto;
     padding: 15px;
-    text-align: left;
+    text-align: center;
+    font-size: larger;
 }
 
 #contact-form input, #contact-form textarea {
@@ -275,19 +277,85 @@ header .current-date{
     border: 1px solid black;
     box-shadow: 0 0 5px #fa6491;
     border-radius: 5px;
+    font-size: larger;
+
 }
 
 #contact-form button {
+    margin-right: auto;
+    margin-left: auto;
     background-color: #fa6491;
     color: white;
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    font-size: large;
 }
 
 #contact-form button:hover {
     background-color: #e63973;
+}
+
+/* Loading Spinner */
+.loading-spinner {
+    display: none; 
+    position: fixed;
+    top: 45%;
+    left: 45%;
+    transform: translate(-50%, -50%);
+    border: 16px solid white;
+    border-top: 16px solid #fa6491; 
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+    z-index: 12;
+
+}
+
+/* Overlay */
+.overlay {
+    display: none; /* Hide by default */
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.5); 
+    z-index: 11;
+}
+
+/* Thank You Popup */
+.thank-you-popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    color: black;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+    z-index: 13;
+}
+
+.thank-you-popup button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    color: black;
+    font-size: 1.5em;
+    cursor: pointer;
+}
+
+/* Spinner animation */
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
 
 
