--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -97,7 +97,7 @@ h1{
 
 .hero-image img {
     display: block; 
-    max-width: 80%; 
+    max-width: 70%; 
     height: auto; 
     margin: 1vh auto; 
     border-radius: 4vw; 
@@ -111,8 +111,8 @@ h1{
     display: inline-block; 
     padding: 20px;
     margin: 5vh auto; 
-    max-width: 70%; 
-    font-size: 1.75vw;
+    max-width: 60%; 
+    font-size: 1.5vw;
 }
 
 .content-section {
@@ -165,35 +165,39 @@ h1{
     right: 0;
 }
 
-/*-CONTACT ME---------------------------------------------------------------------------------------*/
-
+/*-APPOINTMENT---------------------------------------------------------------------------------------*/
 
 .wrapper{
     margin-left: auto;
     margin-right: auto;
-    width: 450px;
-     background: #fff;
-    border-radius: 10px;
-     box-shadow: 0 15px 40px rgba(0,0,0,0.12);
+    width: 45%;
+    background: #fff;
+    border-radius: 20px;
+    box-shadow: 0 15px 40px rgba(0,0,0,0.12);
+    margin-top: 3vh;
+    margin-bottom: 5vh;
 }
 .wrapper header{
     display: flex;
     align-items: center;
-    padding: 25px 30px 10px;
+    padding: 25px 30px 0px; 
     justify-content: space-between;
+    margin-left: 5vw;
+    margin-right: 5vw;
 }
 header .icons{
     display: flex;
+
 }
-header .icons span{
-    height: 38px;
-    width: 38px;
-    margin: 0 1px;
+header .icons span {
+    height: 3vw;  
+    width: 3vw;   
+    margin: 0 10px; 
     cursor: pointer;
     color: #878787;
     text-align: center;
-    line-height: 38px;
-    font-size: 1.9rem;
+    line-height: 3vw; 
+    font-size: 2.5rem;
     user-select: none;
     border-radius: 50%;
 }
@@ -204,12 +208,13 @@ header .icons span:hover{
     background: #f2f2f2;
 }
 header .current-date{
-    font-size: 1.45rem;
+    font-size: 2rem;
     font-weight: 500;
 }
 .calendar{
     padding: 20px;
-    margin-right: 10%;
+    margin-right: 5vh;
+    padding-bottom: 5vh;
 }
 .calendar ul{
     display: flex;
@@ -223,7 +228,7 @@ header .current-date{
 .calendar li{
     color: #333;
     width: calc(100% / 7);
-    font-size: 1.07rem;
+    font-size: 1.5rem;
 }
 .calendar .weeks li{
     font-weight: 500;
@@ -246,8 +251,8 @@ header .current-date{
     content: "";
     left: 50%;
     top: 50%;
-    height: 40px;
-    width: 40px;
+    height: 50px;
+    width: 50px;
     z-index: -1;
     border-radius: 50%;
     transform: translate(-50%, -50%);
@@ -257,6 +262,12 @@ header .current-date{
 }
 .days li:not(.active):hover::before{
     background: #f2f2f2;
+}
+
+.availability-instruction {
+    text-align: center;
+    font-size: 1.6rem;
+    color: black; 
 }
 
 /*-CONTACT ME---------------------------------------------------------------------------------------*/
@@ -316,7 +327,7 @@ header .current-date{
 
 /* Overlay */
 .overlay {
-    display: none; /* Hide by default */
+    display: none; 
     position: fixed;
     width: 100%;
     height: 100%;
@@ -352,6 +363,39 @@ header .current-date{
     cursor: pointer;
 }
 
+.availability-popup {
+    display: none; 
+    position: fixed; 
+    top: 50%; 
+    left: 50%;
+    transform: translate(-50%, -50%); 
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 60%; 
+    max-width: 600px; 
+    z-index: 1002; 
+}
+
+.close-popup {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    border: none;
+    background: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+
+.availability-text {
+    font-size: 1.2rem;
+    text-align: center;
+    color: black;
+}
+
+
+
 /* Spinner animation */
 @keyframes spin {
     0% { transform: rotate(0deg); }
@@ -361,7 +405,6 @@ header .current-date{
 
 /*-MOBILE VIEW---------------------------------------------------------------------------------------*/
 @media (max-width: 600px) {
-   
 
     .content {
         margin-top: 10vh;
