--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -86,18 +86,27 @@ h1{
 
 /*-HOME SECTION---------------------------------------------------------------------------------------*/
 
+.logo img {
+    display: block; 
+    max-width: 30%; 
+    height: auto; 
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 15px; 
+}
+
 .name-image img {
     display: block; 
     max-width: 70%; 
     height: auto; 
-    margin: 1vh auto; 
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 15px; 
-    margin-bottom: 2vh;
 }
 
 .hero-image img {
     display: block; 
-    max-width: 70%; 
+    max-width: 60%; 
     height: auto; 
     margin: 1vh auto; 
     border-radius: 4vw; 
@@ -145,8 +154,8 @@ h1{
 }
 
 .about-image, .about-text {
-    flex: 1; /* Each takes up half of the container */
-    padding: 10px; /* Adjust padding as needed */
+    flex: 1; 
+    padding: 10px;
 }
 
 .about-image img {
