Mobile UI Updates

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -182,6 +182,7 @@ h1{
     max-width: 600px; 
     margin: auto;
     overflow: hidden;
+    margin-bottom: 10vh;
 }
 
 .carousel-images img {
@@ -468,34 +469,50 @@ header .current-date{
         padding: 10px;
     }
 
-    .aboutMe-image img, .gallery-image img, .appointment-image img, .contact-image img, .logo img, .name-image img, .hero-image img {
-        max-width: 100%;
-        height: auto;
+    /*Home Page*/
+    .logo img{
+        width: 70%
+    }
+    
+    .welcome-text {
+        font-size: 3vw; 
+        padding: 10px;
+        max-width: 80%;
     }
 
-    .welcome-text {
-        font-size: 4vw; 
-        padding: 10px;
-        max-width: 90%;
+    /*About Me*/
+    .aboutMe-image img {
+        max-width: 60%;
+    }
+
+    /*Gallery*/
+    .gallery-image img{
+        max-width: 50%;
     }
 
     .about-container, .about-item {
         flex-direction: column;
     }
 
+
+    /*Appointment Section*/
+    .appointment-image img{
+        max-width: 90%;
+    }
+
     .wrapper {
         width: 90%;
     }
-
-    #contact-form {
-        width: 90%;
-        padding: 10px;
+    
+    header .current-date{
+        font-size: 5vw;
+        font-weight: 500;
     }
 
     header .icons span {
-        height: 5vw;
-        width: 5vw;
-        font-size: 3.5rem;
+        height: 3vw;
+        width: 3vw;
+        font-size: 2.5rem;
     }
 
     .calendar li {
@@ -505,4 +522,29 @@ header .current-date{
     .availability-instruction {
         font-size: 4vw;
     }
+
+    .calendar .days li::before {
+        height: 30px; 
+        width: 30px; 
+    }
+
+    .days li.active::before, .days li:not(.active):hover::before {
+        height: 30px;
+        width: 30px;
+    }
+
+    /*Contact Me*/
+    .contact-image img{
+        max-width: 80%;
+    }
+    #contact-form {
+        width: 70%;
+        font-size: 3vw;
+        padding-right: 8vw;
+
+    }
+    #contact-form button {
+        margin-left: 3vw;
+    }
+    
 }
