--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -92,31 +92,40 @@ h1{
 
 /*-HOME SECTION---------------------------------------------------------------------------------------*/
 
-.logo img {
-    display: block; 
-    max-width: 60%; 
-    height: auto; 
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 15px;
-    margin-bottom: -5vh; 
+/* Header styles */
+.main-header {
+    background-color: #f9bdcf;
+    display: flex;
+    align-items: center;
+    padding: 0 10px;
+    height: 7vh;
 }
 
-.name-image img {
-    display: block; 
-    max-width: 70%; 
+.main-header .logo img {
     height: auto; 
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 15px; 
+    width: 30%; 
+    margin-right: 20px;
+}
+.main-nav {
+    display: flex;
+    align-items: center;
 }
 
-.hero-image img {
-    display: block; 
-    max-width: 60%; 
-    height: auto; 
-    margin: 1vh auto; 
-    border-radius: 4vw; 
+.main-nav a {
+    display: flex;
+    align-items: center;
+    color: black;
+    text-decoration: none;
+    margin-right: 20px;
+    font-size: 1em;
+}
+
+.main-nav a i {
+    margin-right: 5px;
+}
+
+.content-section {
+    margin-top: 10vh;
 }
 
 
