--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -97,51 +97,54 @@ h1{
     background-color: #f9bdcf;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     padding: 0 10px;
-    height: 7vh;
+    height: 10vh;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 1000;
 }
 
 .main-header .logo img {
-    height: auto; 
-    width: 30%; 
-    margin-right: 20px;
+    height: 25%; 
+    width: 25%;
+    margin-right: auto; /* Pushes everything else to the right */
+    margin-left: 0;
 }
+
+.insta img {
+    height: 20%; 
+    width: 20%; 
+}
+
 .main-nav {
     display: flex;
     align-items: center;
+    justify-content: space-around; 
+    width: 60%;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
 .main-nav a {
     display: flex;
+    flex-direction: column;
     align-items: center;
     color: black;
     text-decoration: none;
-    margin-right: 20px;
-    font-size: 1em;
+    margin: 0 15px; 
+    font-size: 1.25em; 
+    white-space: nowrap;
 }
 
 .main-nav a i {
-    margin-right: 5px;
+    font-size: 30px; 
+    margin-bottom: 5px;
 }
 
 .content-section {
-    margin-top: 10vh;
-}
-
-
-.welcome-text {
-    background-color: #f9bdcf; 
-    color: black; 
-    border-radius: 2vw; 
-    display: inline-block; 
-    padding: 20px;
-    margin: 5vh auto; 
-    max-width: 70%; 
-    font-size: 1.75vw;
-}
-
-.content-section {
-    padding-right: 2vw; 
+    padding-top: 12vh; 
 }
 
 .content-section h1,
